--- a/src/app/locale/fr_FR/Mage_Core.csv
+++ b/src/app/locale/fr_FR/Mage_Core.csv
@@ -36,7 +36,7 @@
 "Browser Capabilities Detection","Détection des capacités du navigateur"
 "CSS Settings","Paramètres CSS"
 "Cache Storage Management","Gestion du cache"
-"Cache storage may contain another data. Are you sure that you want flush it?","Le stockage de cache peut contenir d\'autres données. Êtes-vous sûr(e) de vouloir le purger ?"
+"Cache storage may contain another data. Are you sure that you want flush it?","Le stockage de cache peut contenir d'autres données. Êtes-vous sûr(e) de vouloir le purger ?"
 "Can't retrieve request object","Impossible de récupérer l'objet de requête"
 "Cancel","Annuler"
 "Cannot complete this operation from non-admin area.","Impossible d'accomplir cette opération en dehors de la section d'admin."
@@ -348,7 +348,7 @@
 "Experimental. Turn this feature off if there are troubles with relative urls inside css-files.","Expérimental. Désactivez cette fonctionnalité si vous rencontrez des problèmes avec les urls contenues dans les fichiers CSS."
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make neccessary changes in your shipping address.","Vous ne pouvez pas poursuivre votre commande car aucun mode de livraison n'est disponible pour votre adresse."
 "<strong style=""color:red"">Warning!</strong> When using CDN, in some cases JavaScript may not run properly if CDN is not in your subdomain","<strong style=""color:red"">Attention !</strong> Lors de l'utilisation de CDN, le code JavaScript peut ne pas fonctionner correctement si le CDN ne se trouve pas dans un sous-domaine."
-"Cache storage may contain additional data. Are you sure that you want flush it?","Le stockage de cache peut contenir d\'autres données. Êtes-vous sûr(e) de vouloir le purger ?"
+"Cache storage may contain additional data. Are you sure that you want flush it?","Le stockage de cache peut contenir d'autres données. Êtes-vous sûr(e) de vouloir le purger ?"
 "File %s does not exist","Le fichier %s n'existe pas."
 "File %s is not readable","Le fichier %s n'est pas lisible"
 "File system","Système de fichiers"
